# auto-scan-live-facebook

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/orchestrator-herdr/: SKILL.md  WORKFLOW.md
.pi/: hooks.json
backend/app/: discovery.py  main.py  models.py  service.py
backend/tests/: test_search_api.py
docs/adr/: 0001-public-facebook-discovery-via-browser-automation.md  0002-local-web-application.md  0003-verify-live-status-before-showing-results.md  0004-open-broadcasts-on-facebook.md  0005-use-python-backend-and-react-frontend.md  0006-deterministic-metadata-relevance-and-batched-discovery.md
docs/specs/: live-scout.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/src/lib/: api.test.ts  api.ts
