[project]
name = "live-scout"
version = "0.1.0"
description = "Discover publicly searchable Facebook livestreams that are live now."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "playwright>=1.50,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "anyio>=4.8,<5",
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
